--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -133,7 +133,7 @@ const navObj = [
     class="fixed top-8 z-10"
   />
   <div
-    class="relative col-start-2 col-span-full flex flex-col justify-between h-full pt-24 pr-4 max-lg:pt-0 max-lg:col-start-2 max-lg:col-span-10"
+    class="relative col-start-2 col-span-full flex flex-col justify-between h-full pt-10 pr-4 max-lg:pt-0 max-lg:col-start-2 max-lg:col-span-10 max-lg:px-0"
   >
     <img
       src={headerIndex
@@ -142,20 +142,20 @@ const navObj = [
       width={440}
       height={450}
       alt="stars bg"
-      class="absolute bottom-0 -left-12 z-10"
+      class="absolute bottom-0 -left-6 z-10"
     />
 
     {
       headerIndex ? (
         <>
           <section class="self-start">
-            <H1 text="HIRASHIKI RAFAEL" index={true} />
-            <p>Casual Dancer</p>
+            <H1 text="HIRASHIKI RAFAEL" index={true} class="text-5xl max-xl:text-4xl max-md:text-3xl max-sm:text-2xl font-bold" />
+            <p class="max-lg: text-sm">Casual Dancer</p>
           </section>
 
-          <section class="text-2xl max-lg:text-lg max-md:text-lg font-bold">
-            <h2 class="pt-4 pb-4">⯁ Web Frontend Developer (Junior)</h2>
-            <h3 class="pb-4">❍ System Developer (graduating)</h3>
+          <section class="text-2xl max-lg:text-lg max-md:text-lg max-sm:text-base font-bold">
+            <h2 class="pt-4 pb-4"><i class="fa-regular fa-circle"></i> Web Frontend Developer (Junior)</h2>
+            <h3 class="pb-4"><i class="fa-solid fa-moon"></i> System Developer (graduating)</h3>
           </section>
 
           <section class="">
@@ -167,12 +167,12 @@ const navObj = [
             <p>Special interest in health, environment and nature fields</p>
           </section>
 
-          <nav class="self-end justify-self-end relative z-50 pb-24">
+          <nav class="self-end justify-self-end relative z-50 pb-20 max-md:pb-10 max-md:pt-4">
             <ul>
               <li class="">
                 <a
                   href="/roadmap"
-                  class="text-4xl max-xl:text-3xl max-lg:2xl font-bold flex flex-nowrap justify-center items-center gap-4 text-right"
+                  class="text-4xl max-xl:text-3xl max-lg:text-2xl max-md:text-xl font-bold flex flex-nowrap justify-center items-center gap-4 text-right"
                 >
                   <p class="underline">RoadMap & Projects</p>
                   <div class="star-container">
@@ -197,32 +197,32 @@ const navObj = [
         </>
       ) : (
         <>
-          <ButtonToggleHeader  client:only/>
+          <ButtonToggleHeader client:only/>
           <RafaPic class=" w-4/6 m-auto max-lg:w-6/6" />
-          <H1 text="HIRASHIKI RAFAEL" index={false} />
+          <H1 text="HIRASHIKI RAFAEL" index={false}  class="absolute bottom-1/4 -left-10 -rotate-90 w-0 whitespace-nowrap text-3xl  max-xl:text-2xl max-lg:text-3xl max-md:text-2xl font-bold  m-auto"/>
           <nav class="pb-16 relative z-50  max-xl:pb-20">
-            <ul>
+            <ul class="pr-4">
               {navObj.map((ele) => (
                 <li>
                   {ele.path === "/project05" && <p class="li-year">2023</p>}
                   {ele.path === "/project03" && <p class="li-year">2022</p>}
                   <a
                     href={ele.path}
-                    class="text-xl max-xl:text-lg max-lg:text-base font-bold flex flex-nowrap justify-between items-center gap-4"
+                    class="text-xl max-xl:text-lg max-lg:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
                   >
-                    <p class="flex flex-col items-start">
+                    <p class={`flex flex-col items-start ${pathname === ele.path && "clr-brand-orange"}`} >
                       <span class="li-projectTitle">{ele.navTitle}</span>
                       <span class="li-role">{ele.navSubtitle} </span>
                     </p>
                     <div class="star-container">
                       <div
                         class={`star-bar ${
-                          pathname === ele.path && "big-bar"
+                          pathname === ele.path && "big-bar clr-brand-orange"
                         } `}
                       />
                       <i
                         class={`fa-solid fa-diamond ${
-                          pathname === ele.path && "big-diamond"
+                          pathname === ele.path && "big-diamond clr-brand-orange"
                         } `}
                       />
                     </div>
