--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,6 @@ import RafaPic from "../components/Rafa-pic.astro";
     height={940}
     format="webp"
     alt="web development applications icons and logos"
-    class="m-auto w-full max-lg:w-9/12 max-lg:absolute top-0 right-0 max-md:w-11/12 max-sm:w-full"
+    class="m-auto w-full max-lg:w-9/12 max-lg:absolute top-0 right-0 max-md:w-11/12 max-sm:w-full max-sm:top-8"
   />
 </Layout>
