--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,6 @@ import RafaPic from "../components/Rafa-pic.astro";
     height={940}
     format="webp"
     alt="web development applications icons and logos"
-    class="m-auto w-full max-lg:w-9/12 max-lg:absolute top-0 right-0 max-md:w-11/12 max-sm:w-full max-sm:top-8"
+    class="relative m-auto w-full max-lg:max-w-2xl max-lg:mr-0 top-0 max-lg:top-24 max-lg:w-9/12 right-0 max-md:w-11/12 max-md:top-10 max-sm:w-full max-sm:top-8"
   />
 </Layout>
