--- a/src/components/ProjectLayout.astro
+++ b/src/components/ProjectLayout.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import ProjectLayoutLinks from "./ProjectLayout-Links.astro";
-import ProjectLayoutBody from "./ProjectLayout-Body.astro";
 import ProjectLayoutHead from "./ProjectLayout-Head.astro";
+import ProjectLayoutBottomStars from "./ProjectLayout-BottomStars.astro";
 
 const { project } = Astro.props;
 ---
@@ -13,14 +13,16 @@ const { project } = Astro.props;
 >
   <ProjectLayoutLinks project={project} />
   <ProjectLayoutHead project={project} />
-  
-  <ProjectLayoutBody>
+
+  <div class="relative col-start-3 col-span-9">
     <a href={project?.data.projectURL} target="_blank">
       <img src={`/Images/${project?.data.thumbnail}.webp`} class="" />
     </a>
+  </div>
 
+  <ProjectLayoutBottomStars>
     <ul
-      class={`absolute bottom-0 -right-8 font-bold py-8 w-fit ml-auto text-right css-glass-bg px-6`}
+      class={`absolute bottom-6 right-6 font-bold py-8 w-fit ml-auto text-right css-glass-bg px-6`}
     >
       {
         project?.data.projectBulletList.map((option: string) => (
@@ -28,5 +30,5 @@ const { project } = Astro.props;
         ))
       }
     </ul>
-  </ProjectLayoutBody>
+  </ProjectLayoutBottomStars>
 </Layout>
