--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,7 +52,7 @@ const projects = await getCollection("projects");
   <body
     class={`grid grid-cols-12 ${
       headerIndex && "clr-bg max-lg:css-body-index-small"
-    } overflow-y-hidden `}
+    } overflow-hidden `}
   >
     {
       headerIndex && (
@@ -63,7 +63,7 @@ const projects = await getCollection("projects");
           />
           <Main
             projects={projects}
-            class={`relative w-full h-fit m-auto col-span-7 css-no-scrollbar max-lg:row-start-1 max-lg:col-span-full  max-sm:right-1/4`}
+            class={`relative w-full h-fit m-auto col-span-7 css-no-scrollbar max-lg:row-start-1 max-lg:col-span-full `}
           >
             <slot />
           </Main>
