--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,15 +12,15 @@ import RafaPic from "../components/Rafa-pic.astro";
     All these shootin' stars in the dark (Yeah)
     All these shootin' stars in the dark, make a wish (Yeah)
     Takin' off from the ground, it's amazin'
-    So outta this world, I'm in space"` 
+    So outta this world, I'm in space"`
   headerIndex={true}
 >
-  <Image
-    src="/Images/index-rafa2.webp"
-    width={1100}
-    height={940}
-    format="webp"
-    alt="web development applications icons and logos"
-    class="relative m-auto w-full max-lg:max-w-2xl max-lg:mr-0 top-0 max-lg:top-24 max-lg:w-9/12 right-0 max-md:w-11/12 max-md:top-10 max-sm:w-fit max-sm:right-1/4 max-sm:top-8"
-  />
+    <Image
+      src="/Images/index-rafa2.webp"
+      width={1100}
+      height={940}
+      format="webp"
+      alt="web development applications icons and logos"
+      class="absolute w-full m-auto max-lg:max-w-2xl top-0 max-lg:top-10 max-lg:w-11/12 right-0 max-md:top-10 max-sm:w-fit max-sm:right-2/5 max-sm:-top-16"
+    />
 </Layout>
