more and more fixes...

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -150,6 +150,8 @@ const projects = await getCollection("projects");
       body {
         font-family: "Roboto", sans-serif;
         color: var(--clr-charchoal);
+        height: 100dvh;
+        height: 100vh;
       }
       .css-body-index-small {
         grid-template-rows: auto;
