--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,6 @@ import RafaPic from "../components/Rafa-pic.astro";
       height={940}
       format="webp"
       alt="web development applications icons and logos"
-      class="absolute w-full m-auto max-lg:max-w-2xl top-0 max-lg:top-10 max-lg:w-11/12 right-0 max-md:top-10 max-sm:w-fit max-sm:right-2/5 max-sm:-top-16"
+      class="relative w-full right-0  m-auto max-lg:max-w-2xl max-lg:absolute top-0  max-lg:top-10 max-lg:w-11/12 max-md:top-10 max-sm:w-fit max-sm:-left-40 max-sm:-top-8"
     />
 </Layout>
