--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,7 +63,7 @@ const projects = await getCollection("projects");
           />
           <Main
             projects={projects}
-            class={`relative w-full h-fit m-auto col-span-7 css-no-scrollbar css-body-row-1 max-lg:col-span-full max-lg:mx-auto max-lg:my-0 `}
+            class={`relative w-full h-fit m-auto col-span-7 css-no-scrollbar css-body-row-1 max-lg:col-span-full max-lg:my-0 `}
           >
             <slot />
           </Main>
