--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -133,7 +133,7 @@ const navObj = [
     class="fixed top-8 z-10"
   />
   <div
-    class="relative col-start-2 col-span-full flex flex-col justify-between h-full pt-10 pr-4 max-lg:pt-0 max-lg:col-start-2 max-lg:col-span-10 max-lg:px-0"
+    class="relative col-start-2 col-span-full flex flex-col justify-around h-full pt-10 pr-4 max-lg:pt-0 max-lg:col-start-2 max-lg:col-span-10 max-lg:px-0"
   >
     <img
       src={headerIndex
