--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,6 @@ import RafaPic from "../components/Rafa-pic.astro";
       height={940}
       format="webp"
       alt="web development applications icons and logos"
-      class="relative w-full right-0 m-auto max-lg:max-w-2xl max-lg:absolute top-0 max-lg:top-10 max-md:top-10"
+      class="relative w-full right-0 m-auto max-lg:max-w-2xl max-lg:top-2"
     />
 </Layout>
