--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,7 +51,7 @@ const projects = await getCollection("projects");
 
   <body
     class={`grid grid-cols-12 ${
-      headerIndex && "clr-bg css-body-index-small"
+      headerIndex && "clr-bg  max-lg:grid-rows-2"
     } overflow-hidden `}
   >
     {
