--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,6 @@ import RafaPic from "../components/Rafa-pic.astro";
       height={940}
       format="webp"
       alt="web development applications icons and logos"
-      class="relative w-full right-0 m-auto max-lg:max-w-2xl max-lg:top-2 max-lg:mr-0"
+      class="relative w-full right-0 m-auto max-lg:max-w-3xl max-lg:w-10/12 max-lg:mr-0 max-md:w-full"
     />
 </Layout>
