--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -61,6 +61,9 @@ const navObj = [
 ---
 
 <style>
+  .header-in-grid {
+    grid-template-rows: min-content 1fr;
+  }
   .star-container {
     height: fit-content;
     position: relative;
@@ -130,10 +133,10 @@ const navObj = [
     height={40}
     format="svg"
     alt="stars bg"
-    class="fixed top-8 z-10"
+    class="absolute top-4 z-10"
   />
   <div
-    class="relative col-start-2 col-span-full flex flex-col justify-around h-full pt-10 pr-4 max-lg:pt-0 max-lg:col-start-2 max-lg:col-span-10 max-lg:px-0"
+    class={`${!headerIndex && "header-in-grid"} relative col-start-2 col-span-full grid gap-4 justify-around h-full pt-10 pr-4 max-lg:col-start-2 max-lg:col-span-10`}
   >
     <img
       src={headerIndex
@@ -198,9 +201,9 @@ const navObj = [
       ) : (
         <>
           <ButtonToggleHeader client:only/>
-          <RafaPic class=" w-4/6 m-auto max-lg:w-6/6" />
+          <RafaPic class=" w-4/6 m-auto h-fit max-lg:w-6/6" />
           <H1 text="HIRASHIKI RAFAEL" index={false}  class="absolute bottom-1/4 -left-10 -rotate-90 w-0 whitespace-nowrap text-3xl  max-xl:text-2xl max-lg:text-3xl max-md:text-2xl font-bold  m-auto"/>
-          <nav class="pb-16 relative z-50  max-xl:pb-20">
+          <nav class="pb-16 relative z-50  max-xl:pb-20 self-end">
             <ul class="pr-4">
               {navObj.map((ele) => (
                 <li>
