--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,19 +51,19 @@ const projects = await getCollection("projects");
 
   <body
     class={`grid grid-cols-12 ${
-      headerIndex && "clr-bg  max-lg:grid-rows-2"
-    } overflow-hidden `}
+      headerIndex && "clr-bg body-rows"
+    } overflow-x-hidden css-no-scrollbar`}
   >
     {
       headerIndex && (
         <>
           <Header
             headerIndex={headerIndex}
-            class={`relative w-full h-screen col-start-1 col-span-5 pt-8 grid grid-cols-8 max-lg:h-auto max-lg:grid-cols-12 css-body-row-2 max-lg:col-span-full`}
+            class={`relative w-full css-min-h100 col-start-1 col-span-5 grid grid-cols-8 max-lg:min-h-min max-lg:grid-cols-12 css-body-row-2 max-lg:col-span-full`}
           />
           <Main
             projects={projects}
-            class={`relative w-full h-fit m-auto col-span-7 css-no-scrollbar css-body-row-1 max-lg:col-span-full max-lg:my-0 `}
+            class={`w-full h-fit m-auto col-span-7 css-no-scrollbar css-body-row-1 max-lg:w-12/12 max-lg:my-0 max-lg:top-12 max-sm:col-span-full `}
           >
             <slot />
           </Main>
@@ -80,7 +80,7 @@ const projects = await getCollection("projects");
           />
           <Main
             projects={projects}
-            class={`css-headermain relative w-full h-screen pb-8 col-span-9 max-lg:col-start-1 max-lg:col-span-full overflow-y-scroll pt-16 css-no-scrollbar grid grid-cols-12`}
+            class={`w-full h-screen pb-8 col-span-9 max-lg:col-start-1 max-lg:col-span-full overflow-y-scroll pt-16 css-no-scrollbar grid grid-cols-12`}
           >
             <slot />
           </Main>
@@ -88,7 +88,6 @@ const projects = await getCollection("projects");
       )
     }
 
-    <!-- <Footer/> -->
     <style is:global>
       :root {
         --accent: 136, 58, 234;
@@ -150,8 +149,15 @@ const projects = await getCollection("projects");
       body {
         font-family: "Roboto", sans-serif;
         color: var(--clr-charchoal);
-        height: 100dvh;
-        height: 100vh;
+      }
+
+      .body-rows {
+        grid-template-rows: 1fr 1fr;
+      }
+
+      main {
+        position: relative;
+        grid-template-rows: min-content 1fr;
       }
       .css-body-index-small {
         grid-template-rows: auto;
@@ -171,9 +177,12 @@ const projects = await getCollection("projects");
         width: 100%;
         position: relative;
         z-index: 999;
-        height: 100dvh;
       }
-
+      .css-min-h100 {
+        min-height: 100svh;
+        min-height: 100dvh;
+        min-height: 100vh;
+      }
       #toggleButton {
         z-index: 999;
         transform: rotate(45deg);
@@ -189,20 +198,28 @@ const projects = await getCollection("projects");
         transition: all 0.5s;
       }
 
+      @media screen and (min-width: 1201px) {
+        .css-min-h100 {
+          min-height: 100svh;
+          min-height: 100dvh;
+          min-height: 100vh;
+        }
+      }
       @media screen and (max-width: 1200px) {
         header {
           width: 50%;
           left: 0;
           transition: all 0.3s ease-out;
-          height: 100dvh;
+        }
+        main {
+          position: absolute;
         }
         .css-hideHeader {
           position: absolute;
           left: -50%;
           transition: all 0.3s ease-out;
-          height: 100dvh;
         }
-        
+
         .css-body-index-small {
           grid-template-rows: 1fr 1fr;
         }
@@ -224,9 +241,18 @@ const projects = await getCollection("projects");
         }
       }
       @media screen and (max-width: 420px) {
+        .body-rows  {
+          grid-template-rows: min-content 1fr;
+          row-gap: 4rem;
+        }
         header {
           width: 100vw;
         }
+
+        main {
+          position: relative;
+        }
+
         .css-hideHeader {
           left: -100%;
         }
@@ -244,9 +270,6 @@ const projects = await getCollection("projects");
           monospace;
       }
 
-      .css-headermain {
-        grid-template-rows: min-content 1fr;
-      }
       .clr-bg {
         background-color: var(--clr-bg);
         color: "white";
