--- a/src/components/ProjectLayout-Links.astro
+++ b/src/components/ProjectLayout-Links.astro
@@ -17,7 +17,8 @@ const { project, road } = Astro.props;
   }
   @media screen and (max-width: 600px) {
     .bars-container {
-      width: clamp(200px, 90%, 500px);
+      width: clamp(200px, 80vw, 500px);
+      height: clamp(300px, 60vh, 500px);
     }
   }
 
@@ -48,13 +49,17 @@ const { project, road } = Astro.props;
     animation: animateHorizontal 0.8s 1 ease-in-out;
   }
   .d-bar {
-    height: 70px;
+    height: 100%;
     width: 3px;
-    rotate: 45deg;
-    position: absolute;
-    top: -55px;
-    left: 25px;
     background-color: var(--clr-bg);
+    animation: animateVertical 0.8s 1 ease-in-out;
+  }
+  .d-bar-container {
+    rotate: 45deg;
+    height: 70px;
+    top: -3px;
+    left: 40px;
+    position: absolute;
   }
   .d-barup {
     height: 70px;
@@ -85,7 +90,7 @@ const { project, road } = Astro.props;
   }
 </style>
 
-<div class="absolute top-8 px-8 gap-y-4 w-6/6 grid grid-cols-12">
+<div class="absolute top-8 pl-4 gap-y-4 w-6/6">
   <div class="bars-container col-start-1 col-span-full">
     <div class="relative h-bar-container">
       <i class="fa-solid fa-circle star -top-3 -left-1 text-xl opacity-100"></i>
@@ -99,11 +104,13 @@ const { project, road } = Astro.props;
       <div class="v-bar"></div>
       <i class="fa-solid fa-circle star -bottom-2 -left-2 text-xl opacity-100"
       ></i>
+    </div>
+    <div class="d-bar-container">
       <div class="d-bar"></div>
     </div>
   </div>
 
-  <div class="flex flex-col gap-2 justify-center items-center">
+  <div class="flex flex-col w-fit pt-4 gap-2 justify-center items-center">
     <a
       href={!road ? project?.data.githubURL : "https://github.com/hiRafa"}
       class="flex flex-col items-center w-fit"
