--- a/src/components/ProjectLayout-BottomStars.astro
+++ b/src/components/ProjectLayout-BottomStars.astro
@@ -39,7 +39,7 @@
     left: -40px;
   }
 </style>
-<div class="absolute col-start-5 col-span-full right-4 bottom-4 h-2/3 w-10/12">
+<div class="absolute col-start-5 col-span-full right-4 bottom-4 h-2/3 w-10/12 max-md:col-start-3">
   <slot/>
   <div class="">
     <img src="/Images/shape-square.svg" class="star star-top star-right" />
