--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -76,7 +76,7 @@ const projects = await getCollection("projects");
         <>
           <Header
             headerIndex={headerIndex}
-            class={`css-hideHeader max-lg:absolute col-start-1 col-span-3 max-lg:col-span-3 clr-bg pt-8 grid grid-cols-5 max-md:min-h-screen`}
+            class={`css-hideHeader max-lg:absolute col-start-1 col-span-3 max-lg:col-span-3 clr-bg pt-8 grid grid-cols-5 max-lg:min-h-screen`}
           />
           <Main
             projects={projects}
