--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -136,7 +136,7 @@ const navObj = [
     class="absolute top-4 z-10"
   />
   <div
-    class={`${!headerIndex && "header-in-grid"} relative col-start-2 col-span-full grid gap-4 justify-around h-full pt-10 pr-4 max-lg:col-start-2 max-lg:col-span-10`}
+    class={`${!headerIndex && "header-in-grid"} relative col-start-2 col-span-full grid gap-4 justify-around h-full pt-10 pr-4 max-lg:col-start-2 max-lg:col-span-10 max-md:justify-center max-md:p-0`}
   >
     <img
       src={headerIndex
