--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -144,7 +144,10 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         Astro • TailWind • Typescript<i class="fa-solid fa-circle"></i>
       </p>
       <p class="grid-item-ball clr-brand-blue">
-        Code Testing<i class="fa-solid fa-circle"></i>
+        Cypress End-to-End Testing<i class="fa-solid fa-circle"></i>
+      </p>
+      <p class="grid-item-ball clr-brand-blue">
+        Javscript Unit Testing<i class="fa-solid fa-circle"></i>
       </p>
     </div>
 
