--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -147,7 +147,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         Cypress End-to-End Testing<i class="fa-solid fa-circle"></i>
       </p>
       <p class="grid-item-ball clr-brand-blue">
-        Javscript Unit Testing<i class="fa-solid fa-circle"></i>
+        Javascript Unit Testing<i class="fa-solid fa-circle"></i>
       </p>
     </div>
 
