--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -157,6 +157,9 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         Project: System Development •<br />Backend (Nest.js Typescript)<i
           class="fa-solid fa-circle"></i>
       </p>
+      <p class="grid-item-ball clr-brand-blue">
+        React • Next.js + Typecript Project<i class="fa-solid fa-circle"></i>
+      </p>
       <p class="grid-item-ball ball-black">
         Python Project<i class="fa-solid fa-circle"></i>
       </p>
