--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -153,7 +153,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
 
     <div class="relative">
       <div class="bar black-bar-blue"></div>
-      <p class="grid-item-ball ball-black">
+      <p class="grid-item-ball clr-brand-blue">
         Project: System Development •<br />Backend (Nest.js Typescript)<i
           class="fa-solid fa-circle"></i>
       </p>
@@ -161,7 +161,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         React • Next.js + Typecript Project<i class="fa-solid fa-circle"></i>
       </p>
       <p class="grid-item-ball ball-black">
-        Python Project<i class="fa-solid fa-circle"></i>
+        Python/Dart • Flutter Project<i class="fa-solid fa-circle"></i>
       </p>
       <h3 class="grid-item-ball ball-black">
         Level Up Dev Skills<i class="fa-solid fa-circle"></i>
@@ -251,10 +251,10 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
       <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"></i>Object Oriented Programming
       </p>
-      <p class="grid-item-ball grid-item-ball-reverse ">
+      <p class="grid-item-ball grid-item-ball-reverse clr-brand-orange">
         <i class="fa-solid fa-circle"></i>Data Base Management System
       </p>
-      <p class="grid-item-ball grid-item-ball-reverse">
+      <p class="grid-item-ball grid-item-ball-reverse clr-brand-orange">
         <i class="fa-solid fa-circle"></i>Web Development
       </p>
     </div>
