--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -137,7 +137,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         Page Speed Performance<i class="fa-solid fa-circle"></i>
       </p>
       <h3 class="grid-item-ball">
-        Level up Frontend •<br />Backend •<br />System Dev Skills
+        Level up Frontend •<br />Basics of Backend •<br />Start System Dev
         <i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball">
@@ -149,10 +149,6 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
       <p class="grid-item-ball clr-brand-blue">
         Javascript Unit Testing<i class="fa-solid fa-circle"></i>
       </p>
-    </div>
-
-    <div class="relative">
-      <div class="bar black-bar-blue"></div>
       <p class="grid-item-ball clr-brand-blue">
         Project: System Development •<br />Backend (Nest.js Typescript)<i
           class="fa-solid fa-circle"></i>
@@ -160,11 +156,12 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
       <p class="grid-item-ball clr-brand-blue">
         React • Next.js + Typecript Project<i class="fa-solid fa-circle"></i>
       </p>
-      <p class="grid-item-ball ball-black">
-        Python/Dart • Flutter Project<i class="fa-solid fa-circle"></i>
-      </p>
+    </div>
+
+    <div class="relative">
+      <div class="bar black-bar-blue"></div>
       <h3 class="grid-item-ball ball-black">
-        Level Up Dev Skills<i class="fa-solid fa-circle"></i>
+        2nd Programming Language: Python/Dart • Flutter Project<i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball ball-black">
         Keep exploring technologies according to the market.
