roadmap system dev update

--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -236,14 +236,13 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         and System Development
       </p>
       <p class="grid-item-ball grid-item-ball-reverse">
-        <i class="fa-solid fa-circle"></i>Object-Oriented Development
-        (Algorithms+ Java Introduction)
+        <i class="fa-solid fa-circle"></i>Object-Oriented Development with Algorithms && Java Basics
       </p>
       <p class="grid-item-ball grid-item-ball-reverse">
-        <i class="fa-solid fa-circle"></i>Software Design
+        <i class="fa-solid fa-circle"></i>Software Design (UML Diagrams, Object Orientation, Classes)
       </p>
       <p class="grid-item-ball grid-item-ball-reverse">
-        <i class="fa-solid fa-circle"></i>More Java
+        <i class="fa-solid fa-circle"></i>More Programming Concepts with Java
       </p>
       <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"></i>Object Oriented Programming
