--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,15 @@ import RafaPic from "../components/Rafa-pic.astro";
 ---
 
 <Layout
-  title="Hirashiki Rafael's Nifty Journey on the web"
-  description=` My second portfolio after my first year as a Frontend Developer. Shooting for the stars. 
-    "If I give it my all, will it pay off?
+  title="Hirashiki Rafael, Frontend Developer Nifty Journey"
+  description="My second portfolio after my first year as a Frontend Developer made with Astro, Tailwind and Typescript. 
+    Shooting for the stars. 
+    `If I give it my all, will it pay off?
     Workin' overtime, no days off
     All these shootin' stars in the dark (Yeah)
     All these shootin' stars in the dark, make a wish (Yeah)
     Takin' off from the ground, it's amazin'
-    So outta this world, I'm in space"`
+    So outta this world, I'm in space`"
   headerIndex={true}
 >
     <Image
