--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const projects = await getCollection("projects");
     <meta property="og:description" content={description} />
     <meta
       property="og:image"
-      content="https://ia.media-imdb.com/images/rock.jpg"
+      content="../../public/Images/index-rafa2.webp"
     />
     <ViewTransitions />
 
