head update. and header min height

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,19 +21,33 @@ const projects = await getCollection("projects");
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content={description} />
+    <meta name="description" content="My second portfolio after my first year as a Frontend Developer made with Astro, Tailwind and Typescript. 
+    Shooting for the stars. 
+    `If I give it my all, will it pay off?
+    Workin' overtime, no days off
+    All these shootin' stars in the dark (Yeah)
+    All these shootin' stars in the dark, make a wish (Yeah)
+    Takin' off from the ground, it's amazin'
+    So outta this world, I'm in space`" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>Hirashiki Rafael, Frontend Developer Nifty Journey</title>
 
-    <meta property="og:title" content={title} />
+    <meta property="og:title" content="Hirashiki Rafael, Frontend Developer Nifty Journey" />
     <meta property="og:type" content="website portfolio" />
     <meta
       property="og:url"
       content="https://hirashiki-rafael-portfolio.netlify.app/"
     />
-    <meta property="og:description" content={description} />
+    <meta property="og:description" content="My second portfolio after my first year as a Frontend Developer made with Astro, Tailwind and Typescript. 
+    Shooting for the stars. 
+    `If I give it my all, will it pay off?
+    Workin' overtime, no days off
+    All these shootin' stars in the dark (Yeah)
+    All these shootin' stars in the dark, make a wish (Yeah)
+    Takin' off from the ground, it's amazin'
+    So outta this world, I'm in space`" />
     <meta
       property="og:image"
       content="../../public/Images/index-rafa2.webp"
@@ -179,9 +193,7 @@ const projects = await getCollection("projects");
         z-index: 999;
       }
       .css-min-h100 {
-        min-height: 100svh;
-        min-height: 100dvh;
-        min-height: 100vh;
+        min-height: 0;
       }
       #toggleButton {
         z-index: 999;
