--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -136,6 +136,9 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
       <p class="grid-item-ball">
         Page Speed Performance<i class="fa-solid fa-circle"></i>
       </p>
+      <p class="grid-item-ball">
+        AB Test with VWO<i class="fa-solid fa-circle"></i>
+      </p>
       <h3 class="grid-item-ball">
         Level up Frontend •<br />Basics of Backend •<br />Start System Dev
         <i class="fa-solid fa-circle"></i>
