--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -166,7 +166,7 @@ const projects = await getCollection("projects");
       }
 
       .body-rows {
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr;
       }
 
       main {
