--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -232,6 +232,11 @@ const projects = await getCollection("projects");
         main {
           position: absolute;
         }
+
+        .body-rows  {
+          grid-template-rows: 1fr 1fr;
+          row-gap: 4rem;
+        }
         .css-hideHeader {
           position: absolute;
           left: -50%;
