roadmap update december

--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -140,13 +140,13 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         AB Test with VWO<i class="fa-solid fa-circle"></i>
       </p>
       <h3 class="grid-item-ball">
-        Level up Frontend •<br />Basics of Backend •<br />Start System Dev
+        Level up Frontend •<br />Basics of Backend •<br />Start System Dev •
         <i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball">
         Astro • TailWind • Typescript<i class="fa-solid fa-circle"></i>
       </p>
-      <p class="grid-item-ball clr-brand-blue">
+      <p class="grid-item-ball">
         Cypress End-to-End Testing<i class="fa-solid fa-circle"></i>
       </p>
       <p class="grid-item-ball clr-brand-blue">
@@ -164,7 +164,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
     <div class="relative">
       <div class="bar black-bar-blue"></div>
       <h3 class="grid-item-ball ball-black">
-        2nd Programming Language: Python/Dart • Flutter Project<i class="fa-solid fa-circle"></i>
+        2nd Programming Language:<br>Python or Dart • Flutter Project<i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball ball-black">
         Keep exploring technologies according to the market.
