roadmap update december 2023

--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -153,11 +153,10 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         Javascript Unit Testing<i class="fa-solid fa-circle"></i>
       </p>
       <p class="grid-item-ball clr-brand-blue">
-        Project: System Development •<br />Backend (Nest.js Typescript)<i
-          class="fa-solid fa-circle"></i>
+        Project: System Development •<br />Backend (Nest.js + Typescript)<i class="fa-solid fa-circle"></i>
       </p>
       <p class="grid-item-ball clr-brand-blue">
-        React • Next.js + Typecript Project<i class="fa-solid fa-circle"></i>
+        Project: System Development •<br />Frontend (React • Next.js + Typecript)<i class="fa-solid fa-circle"></i>
       </p>
     </div>
 
